--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "build": "rimraf ./build && react-scripts build",
     "predeploy": "npm run build && react-snap",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages --save-dev",
     "start": "react-scripts start",
     "lint": "eslint $(git ls-files '*.js')",
     "test": "react-scripts test --watchAll=false",
