--- a/sample.env
+++ b/sample.env
@@ -12,3 +12,5 @@
 
 # Set to `production` to enable analytics and create production optimized builds
 NODE_ENV=development
+
+SKIP_PREFLIGHT_CHECK=true
